# MMCTAgent

./: .dockerignore  .env.example  .env_example  .gitignore  Dockerfile  Dockerfile.base  Dockerfile.mcp  EVALUATIONS.md  README.md  RESPONSIBLE_AI.md  client.py  pyproject.toml  requirements.txt  run_ingestion.py  setup.py  test_mcp_tool.py
app/: .dockerignore  Dockerfile.ingestion_consumer  Dockerfile.main  README.md  ingestion_consumer.py  main.py
app/routers/: ingestion.py  query.py
app/schemas/: ingestion.py  query.py
app/services/: ingestion_services.py  query_services.py
app/utilities/: __init__.py  event_hub_handler.py  execution_timer.py
config/environments/: development.env  production.env
docs/: PROVIDERS.md  PROVIDERS_GUIDE.md  imageAgent.html  index.html
examples/: .env.example  README.md  custom_provider_example.py  extend_provider_example.py  image_agent.ipynb  ingestion_pipeline.ipynb  video_agent.ipynb
image_pipeline/: README.md  environment.yml  main_script.py  requirements.txt  run.ipynb
image_pipeline/models/VIT/: gpt4v.py
image_pipeline/utils/: content_moderation.py  safety_prompts.py
infra/: INFRA_DEPLOYMENT_GUIDE.md  deploy-all.sh  infra_config.yaml  test.ipynb
infra/arm_templates/: app_service_plan_basic.json  app_service_plan_premium.json  azure_ai_search.json  azure_event_hub.json  azure_openai.json  azure_speech_service.json  container_registry.json  ingestion_app_service.json  main_app_service.json  managed_identity.json  query_app_service.json  storage_account.json
infra/bash_scripts/: 00-setup-env-vars.sh  01-deploy-infra.sh  02-create-managed-identity.sh  02-generate-env.sh  03-create-managed-identity.sh  03b-manual-role-assignments.sh  04-build-push-docker-images.sh  04-deploy-app-service.sh  05-deploy-app-service.sh  05-deploy-container-app.sh  06-deploy-container-app.sh
ingestion/: .env.example  AUTHENTICATION.md  __init__.py  example.py  pipeline.py  requirements.txt
ingestion/auth/: __init__.py  credentials.py
ingestion/core/: __init__.py  config.py  models.py  utils.py
ingestion/processing/: __init__.py  clip_embeddings.py  keyframe_extractor.py
ingestion/search/: __init__.py  index_manager.py
ingestion/storage/: __init__.py  blob_manager.py
mcp_server/: MCP_SERVER_GUIDE.md  README.md  __init__.py  client.py  config.py  docker_commands.txt  example_usage.py  main.py  requirements.txt  server.py
mcp_server/notebooks/: autogen_mcp_example.ipynb
mcp_server/tools/: __init__.py  get_context_tool.py  get_relevant_frames_tool.py  get_visual_timestamps.py  image_agent_tool.py  kb_tool.py  query_federator_tool.py  query_frame_tool.py  video_agent_tool.py  video_ingestion_tool.py  visual_search_client.py
mmct/: __init__.py  app.py  blob_store_manager.py  client_manager.py  custom_logger.py  custom_token_credential.py  exceptions.py  llm_client.py  utils.py
mmct/config/: settings.py
mmct/image_pipeline/: __init__.py  prompts.py  readme.md
mmct/image_pipeline/agents/: image_agent.py  image_qna.py  main.py
mmct/image_pipeline/core/tools/: critic.py  object_detect.py  ocr.py  recog.py  tools_description.py  vit.py
mmct/image_pipeline/utils/: safety_prompts.py
mmct/providers/: README.md  __init__.py  azure_providers.py  base.py  credentials.py  factory.py  openai_providers.py  search_document_models.py  search_index_schema.py
mmct/providers/azure_providers/: __init__.py  embedding_provider.py  llm_provider.py  search_provider.py  speech_service_provider.py  storage_provider.py  transcription_provider.py  vision_provider.py  whisper_transcription_provider.py
mmct/providers/base/: __init__.py  embedding_provider.py  image_embedding_provider.py  llm_provider.py  search_provider.py  storage_provider.py  transcription_provider.py  vision_provider.py
mmct/providers/custom_providers/: __init__.py  image_embedding_provider.py  local_faiss_search_provider.py  search_provider.py  storage_provider.py
mmct/providers/openai_providers/: __init__.py  embedding_provider.py  llm_provider.py  transcription_provider.py  vision_provider.py
mmct/security/: secrets.py
mmct/tests/: __init__.py
mmct/tests/providers/: __init__.py  test_image_embedding_provider.py  test_local_faiss_search_provider.py
mmct/utils/: error_handler.py  logging_config.py  validation.py
mmct/video_pipeline/: __init__.py  prompts_and_description.py  readme.md
mmct/video_pipeline/agents/: video_agent.py
mmct/video_pipeline/utils/: ai_search_client.py  embedding_utils.py  helper.py  video_frame_search.py
video_pipeline/: README.md  dataset.json  mmct_video.py  requirements.txt  secrets_mmct_video.sh  system_prompt_planner.txt  system_prompt_planner_with_guardrails.txt
(+75 files in other folders)
