[project]
name = "mmct"
version = "1.0.0"
dependencies = [
    "fastapi>=0.104.0,<1.0.0",
    "uvicorn[standard]>=0.24.0,<1.0.0",
    "pydantic>=2.5.0,<3.0.0",
    "loguru>=0.7.0,<1.0.0",
    "aiofiles>=23.2.0,<24.0.0",
    "openai>=1.3.0,<2.0.0",
]

[project.optional-dependencies]
azure = [
    "azure-identity>=1.15.0,<2.0.0",
    "azure-storage-blob>=12.19.0,<13.0.0",
    "azure-search-documents>=11.4.0,<12.0.0",
    "azure-cognitiveservices-speech>=1.38.0,<2.0.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.12.0",
    "black>=23.9.0",
    "isort>=5.12.0",
    "mypy>=1.6.0",
    "pre-commit>=3.4.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.4.0",
    "mkdocstrings[python]>=0.23.0",
]