[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mmct"
version = "1.0.0"
description = "Multi-modal Critical Thinking Agent Framework"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fastapi>=0.104.0,<1.0.0",
    "uvicorn[standard]>=0.24.0,<1.0.0",
    "pydantic>=2.5.0,<3.0.0",
    "pydantic-settings>=2.0.0,<3.0.0",
    "loguru>=0.7.0,<1.0.0",
    "aiofiles>=23.2.0,<24.0.0",
    "openai>=1.3.0,<2.0.0",
    "datasets>=2.20.0,<3.0.0",
    "modelscope>=1.24.0,<2.0.0",
    "torch",
    "torchvision",
    "transformers>=4.30.0,<5.0.0",
    "tiktoken>=0.7.0,<1.0.0",
]

[project.optional-dependencies]
azure = [
    "azure-identity>=1.15.0,<2.0.0",
    "azure-storage-blob>=12.19.0,<13.0.0",
    "azure-search-documents>=11.4.0,<12.0.0",
    "azure-cognitiveservices-speech>=1.38.0,<2.0.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.12.0",
    "black>=23.9.0",
    "isort>=5.12.0",
    "mypy>=1.6.0",
    "pre-commit>=3.4.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.4.0",
    "mkdocstrings[python]>=0.23.0",
]

[tool.setuptools]
packages = ["mmct","mcp_server"]

[tool.setuptools.package-data]
mmct = ["py.typed"]

[tool.setuptools.exclude-package-data]
"*" = ["tests", "tests.*", "*.tests", "*.tests.*"]

[project.urls]
Homepage = "https://github.com/microsoft/MMCTAgent"
Repository = "https://github.com/microsoft/MMCTAgent"
Documentation = "https://github.com/microsoft/MMCTAgent/blob/main/README.md"
Issues = "https://github.com/microsoft/MMCTAgent/issues"

# [project.scripts]
# mmct = "app.main:app"  # Commented out since app is not in base image

[tool.black]
line-length = 100
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "azure.*",
    "openai.*",
    "uvicorn.*",
    "autogen.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--disable-warnings",
    "-v",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]